app/assets/stylesheets/landing-page.css.scss
/*!
 * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body,
html {
    width: 100%;
    height: 100%;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}


.content-section-b h4, p {
    text-align: center; 
    line-height: 25px;
}

.content-section-b {
    margin-left: auto;
    margin-right: auto;
    width: 70%;}

.topnav {
    font-size: 14px; 
    background-color: #647F99;

}

.lead 
p {
    font-size: 14px;
    font-weight: 400;
    font-color: #E7E7E7
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: asset-url('background_large.png') no-repeat center center;
    background-size: cover;
    font-family: 'Montserrat', sans-serif;
}

.intro-message {
    position: relative;
    padding-top: 10%;
    padding-bottom: 20%;
    font-family: 'Montserrat', sans-serif;
}

.pagecontent {
    margin: 0;
    text-align: center;
    padding: 40px;
    background-color: #D6E9EE;
    font-size: 1em;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
    font-family: 'Montserrat', sans-serif;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #ffffff;
    border-bottom: 1px solid rgba(0,0,0,0.2);
    font-family: 'Montserrat', sans-serif;
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-family: 'Montserrat', sans-serif;
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
        font-family: 'Montserrat', sans-serif;
    }

    .intro-message > h1 {
        font-size: 3em;
        font-family: 'Montserrat', sans-serif;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
        font-family: 'Montserrat', sans-serif;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
        font-family: 'Montserrat', sans-serif;
    }
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
    font-family: 'Montserrat', sans-serif;
}

.content-section-a {
    margin: 0;
    padding: 20px 0;
    background-color: #D6E9EE;
    font-family: 'Montserrat', sans-serif;
}

.content-section-b {
    padding: 50px 0;
    position: relative;
    font-family: 'Montserrat', sans-serif;
    text-align:center;
}

.section-heading {
    margin-bottom: 30px;
    font-family: 'Montserrat', sans-serif;
    font-color: #E7E7E7;
    font-weight: 300;
}

.section-heading-spacer {
    text-align: center;
    margin: 0;
    width: 1200px;
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
    padding-top: 5%;
    padding-bottom: 1%;
    font-color: #E7E7E7;

}

.banner {
    padding: 100px 0;
    color: #f8f8f8;
    background: url(../assets/banner-bg.jpg) no-repeat center center;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 3em;
    font-family: 'Montserrat', sans-serif;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

div.layout
{
  text-align: center;
}
div.centre
{
  text-align: left;
  width: 200px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  font-family: 'Montserrat', sans-serif;
}

footer {
    padding: 50px 0;
    background-color: #f8f8f8;
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
}

p.copyright {
    margin: 15px 0 0;
    font-family: 'Montserrat', sans-serif;
}

.wording {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-size: 30px;
    margin-bottom: 40px;
}


.button {
    /*adjust the roundness*/
    border-radius: 8px;
    moz-border-radius: 8px;
    webkit-border-radius: 8px;
    /*adjust height and width*/
    height: 40px;
    width: 40px; 
    /*change border colour*/
    border:1px #808080 solid;
    color: #ffffff;
    text-align: center;
    vertical-align: middle;
    line-height: 1px;
}

.email {
    /*adjust the roundness*/
    border-radius: 8px;
    moz-border-radius: 8px;
    webkit-border-radius: 8px;
    /*adjust height and width*/
    height: 40px;
    width: 40px; 
    /*change border colour*/
    border:1px #808080 solid;
    color: #808080
}

.element {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

